force http redirects to https

--- a/resource/nginx.conf
+++ b/resource/nginx.conf
@@ -37,6 +37,13 @@ http {
         return 500;
     }
 
+    server
+    {
+        listen 80;
+        server_name venture-shares.com www.venture-shares.com  vshares.cn       www.vshares.cn;
+        rewrite ^  https://www.venture-shares.com$request_uri permanent;
+    }
+
     lua_package_path '/usr/local/openresty/lualib/?.lua;/usr/local/openresty/project.lualib/?.lua';
     lua_package_cpath '/usr/local/openresty/lualib/?.so;/usr/local/openresty/project.lualib/?.so';
 
