add 'template' as default directory, when deploy.

--- a/resource/nginx.conf
+++ b/resource/nginx.conf
@@ -37,8 +37,8 @@ http {
         return 500;
     }
 
-    lua_package_path '/usr/local/openresty/lualib/?.lua;/usr/local/openresty/project.lualib/?.lua';
-    lua_package_cpath '/usr/local/openresty/lualib/?.so;/usr/local/openresty/project.lualib/?.so';
+    lua_package_path '/usr/local/openresty/luajit/share/lua/5.1/?.lua;/usr/local/openresty/lualib/?.lua;/usr/local/openresty/project.lualib/?.lua';
+    lua_package_cpath '/usr/local/openresty/luajit/share/lua/5.1/?.so;/usr/local/openresty/lualib/?.so;/usr/local/openresty/project.lualib/?.so';
 
     include /usr/local/openresty/vhost/*;
 
